--- a/views/graph.erb
+++ b/views/graph.erb
@@ -1,1 +1,40 @@
+<html>
+<head>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript">
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+      var data = google.visualization.arrayToDataTable([
+        ['Year', 'Name 1', 'Name 2'],
+        ['1900',  :year1900,      400],
+      ['1910',  1000,      400],
+          ['1920',  1000,      400],
+          ['1930',  1000,      400],
+          ['1940',  1000,      400],
+          ['1950',  1000,      400],
+          ['1960',  1000,      400],
+          ['1970',  1000,      400],
+          ['1980',  1000,      400],
+          ['1990',  1000,      400],
+          ['2000',  1000,      400],
+    ]);
+
+      var options = {
+        title: 'Name Frequency',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+      };
+
+      var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+      chart.draw(data, options);
+    }
+  </script>
+</head>
+<body>
 <p> You submitted <%= @name %> </p>
+<div id="curve_chart" style="width: 900px; height: 500px"></div>
+</body>
+</html>
