--- a/views/graph.erb
+++ b/views/graph.erb
@@ -9,18 +9,18 @@
       var data = google.visualization.arrayToDataTable([
         // Todo: Swap out these constants with the actual birth frequencies (year1900, year1910, etc.).
         ['Year', 'Name 1', 'Name 2'],
-        ['1900',  1000,      400],
-        ['1910',  1000,      400],
-        ['1920',  1000,      400],
-        ['1930',  1000,      400],
-        ['1940',  1000,      400],
-        ['1950',  1000,      400],
-        ['1960',  1000,      400],
-        ['1970',  1000,      400],
-        ['1980',  1000,      400],
-        ['1990',  1000,      400],
-        ['2000',  1000,      400],
-    ]);
+        ['1900',  <%= @year1900 =>,      400],
+        ['1910',  <%= @year1910 =>,      400],
+        ['1920',  <%= @year1920 =>,      400],
+        ['1930',  <%= @year1930 =>,      400],
+        ['1940',  <%= @year1940 =>,      400],
+        ['1950',  <%= @year1950 =>,      400],
+        ['1960',  <%= @year1960 =>,      400],
+        ['1970',  <%= @year1970 =>,      400],
+        ['1980',  <%= @year1980 =>,      400],
+        ['1990',  <%= @year1990 =>,      400],
+        ['2000',  <%= @year2000 =>,      400],
+      ]);
 
       var options = {
         title: 'Name Frequency',
