Add search functionality for database information.

--- a/views/graph.erb
+++ b/views/graph.erb
@@ -35,7 +35,7 @@
   </script>
 </head>
 <body>
-<p> You submitted <%= @names %> </p>
+<p> You submitted <%= @name %> </p>
 <div id="curve_chart" style="width: 900px; height: 500px"></div>
 </body>
 </html>
