--- a/views/graph.erb
+++ b/views/graph.erb
@@ -8,24 +8,26 @@
     function drawChart() {
       var data = google.visualization.arrayToDataTable([
         // Todo: Swap out these constants with the actual birth frequencies (year1900, year1910, etc.).
-        ['Year', 'Name 1', 'Name 2'],
-        ['1900',  <%= @year1900 =>,      400],
-        ['1910',  <%= @year1910 =>,      400],
-        ['1920',  <%= @year1920 =>,      400],
-        ['1930',  <%= @year1930 =>,      400],
-        ['1940',  <%= @year1940 =>,      400],
-        ['1950',  <%= @year1950 =>,      400],
-        ['1960',  <%= @year1960 =>,      400],
-        ['1970',  <%= @year1970 =>,      400],
-        ['1980',  <%= @year1980 =>,      400],
-        ['1990',  <%= @year1990 =>,      400],
-        ['2000',  <%= @year2000 =>,      400],
+
+        ['Year', '<%= @name %>'],
+        ['1900',  <%= @year1900 %>],
+        ['1910',  <%= @year1910 %>],
+        ['1920',  <%= @year1920 %>],
+        ['1930',  <%= @year1930 %>],
+        ['1940',  <%= @year1940 %>],
+        ['1950',  <%= @year1950 %>],
+        ['1960',  <%= @year1960 %>],
+        ['1970',  <%= @year1970 %>],
+        ['1980',  <%= @year1980 %>],
+        ['1990',  <%= @year1990 %>],
+        ['2000',  <%= @year2000 %>],
       ]);
 
       var options = {
         title: 'Name Frequency',
         curveType: 'function',
-        legend: { position: 'bottom' }
+        legend: { position: 'bottom' },
+        vAxis: {direction: -1}
       };
 
       var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
@@ -35,7 +37,7 @@
   </script>
 </head>
 <body>
-<p> You submitted <%= @name %> </p>
+<p> Added name "<%= @name %>"  to graph.</p>
 <div id="curve_chart" style="width: 900px; height: 500px"></div>
 </body>
 </html>
