--- a/views/graph.erb
+++ b/views/graph.erb
@@ -2,104 +2,42 @@
 <head>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
-    var dataExists = false;
     google.charts.load('current', {'packages':['corechart']});
     google.charts.setOnLoadCallback(drawChart);
-
-    if (!dataExists) {
-      var titlesArray = ["Year"];
-      var 1900sArray  = ["1900"];
-      var 1910sArray  = ["1910"];
-      var 1920sArray  = ["1920"];
-      var 1930sArray  = ["1930"];
-      var 1940sArray  = ["1940"];
-      var 1950sArray  = ["1950"];
-      var 1960sArray  = ["1960"];
-      var 1970sArray  = ["1970"];
-      var 1980sArray  = ["1980"];
-      var 1990sArray  = ["1990"];
-      var 2000sArray  = ["2000"];
-    }
-
-
-    titlesArray.push("<%= @Name %>");
-    1900sArray.push("<%= @year1900 %>");
-    1910sArray.push("<%= @year1910 %>");
-    1920sArray.push("<%= @year1920 %>");
-    1930sArray.push("<%= @year1930 %>");
-    1940sArray.push("<%= @year1940 %>");
-    1950sArray.push("<%= @year1950 %>");
-    1960sArray.push("<%= @year1960 %>");
-    1970sArray.push("<%= @year1970 %>");
-    1980sArray.push("<%= @year1980 %>");
-    1990sArray.push("<%= @year1990 %>");
-    2000sArray.push("<%= @year2000 %>");
-
 
     function drawChart() {
       var data = google.visualization.arrayToDataTable([
         // Todo: Swap out these constants with the actual birth frequencies (year1900, year1910, etc.).
-        titlesArray,
-        1900sArray,
-        1910sArray,
-        1920sArray,
-        1930sArray,
-        1940sArray,
-        1950sArray,
-        1960sArray,
-        1970sArray,
-        1980sArray,
-        1990sArray,
-        2000sArray,
+
+        ['Year', '<%= @name %>'],
+        ['1900',  <%= @year1900 %>],
+        ['1910',  <%= @year1910 %>],
+        ['1920',  <%= @year1920 %>],
+        ['1930',  <%= @year1930 %>],
+        ['1940',  <%= @year1940 %>],
+        ['1950',  <%= @year1950 %>],
+        ['1960',  <%= @year1960 %>],
+        ['1970',  <%= @year1970 %>],
+        ['1980',  <%= @year1980 %>],
+        ['1990',  <%= @year1990 %>],
+        ['2000',  <%= @year2000 %>],
       ]);
 
       var options = {
         title: 'Name Frequency',
         curveType: 'function',
         legend: { position: 'bottom' },
-        desc: true
+        vAxis: {direction: -1}
       };
 
       var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
 
       chart.draw(data, options);
-      dataExists = true;
     }
-    /*
-     function drawChart() {
-     var data = google.visualization.arrayToDataTable([
-     // Todo: Swap out these constants with the actual birth frequencies (year1900, year1910, etc.).
-     ['Year', 'Name 1', 'Name 2'],
-     ['1900',  <%= @year1900 =>],
-        ['1910',  <%= @year1910 =>],
-        ['1920',  <%= @year1920 =>],
-        ['1930',  <%= @year1930 =>],
-        ['1940',  <%= @year1940 =>],
-        ['1950',  <%= @year1950 =>],
-        ['1960',  <%= @year1960 =>],
-        ['1970',  <%= @year1970 =>],
-        ['1980',  <%= @year1980 =>],
-        ['1990',  <%= @year1990 =>],
-        ['2000',  <%= @year2000 =>],
-      ]);
-
-      var options = {
-        title: 'Name Frequency',
-        curveType: 'function',
-        legend: { position: 'bottom' },
-        desc: true
-      };
-
-      var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-      chart.draw(data, options);
-      dataExists = true;
-    }
-    */
   </script>
 </head>
 <body>
-<p> You submitted <%= @names %> </p>
-     <div id="curve_chart" style="width: 900px; height: 500px"></div>
-     </body>
-     </html>
+<p> Added name "<%= @name %>"  to graph.</p>
+<div id="curve_chart" style="width: 900px; height: 500px"></div>
+</body>
+</html>
