--- a/views/graph.erb
+++ b/views/graph.erb
@@ -1,12 +1,11 @@
 <html>
 <head>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
     google.charts.load('current', {'packages':['corechart']});
 
     // This is simply the "first user click on Search" initializer,
     // initializing the arrays once to the first static data row.
-    if (!titlesArray) {
+    if (typeof(titlesArray) == undefined) {
       var titlesArray = ["Year"];
       var Array1900s  = ["1900"];
       var Array1910s  = ["1910"];
