--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,20 @@
               src="https://code.jquery.com/jquery-3.1.1.min.js"
               integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
               crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            var titlesArray = ["Year"];
+            var Array1900s  = ["1900"];
+            var Array1910s  = ["1910"];
+            var Array1920s  = ["1920"];
+            var Array1930s  = ["1930"];
+            var Array1940s  = ["1940"];
+            var Array1950s  = ["1950"];
+            var Array1960s  = ["1960"];
+            var Array1970s  = ["1970"];
+            var Array1980s  = ["1980"];
+            var Array1990s  = ["1990"];
+            var Array2000s  = ["2000"];
+        </script>
     </head>
     <body>
         <header>
